# devman_trening

./: .gitignore  .gitignore.swp  main.py  pyproject.toml  readme
